[package]
name = "xtask"
version = "0.2.0"
edition = "2021"

[dependencies]
# Error handling
anyhow.workspace = true

# Logging
env_logger = "0.11.6"
log.workspace = true

# CLI
clap = { version = "4.5.23", features = ["derive", "wrap_help"] }

# Deserialize configuration file
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
